--- a/App/requirements.txt
+++ b/App/requirements.txt
@@ -17,5 +17,5 @@ sanic==0.6.0
 cape.client==0.2.0
 git+https://github.com/bloomsburyai/cape-userdb
 git+https://github.com/bloomsburyai/cape-api-helpers
-git+https://github.com/bloomsburyai/cape-document-manager
-git+https://github.com/bloomsburyai/cape-responder
+#git+https://github.com/bloomsburyai/cape-document-manager
+#git+https://github.com/bloomsburyai/cape-responder
