--- a/Kubernetes_deployment/frontend-deployment.yaml
+++ b/Kubernetes_deployment/frontend-deployment.yaml
@@ -17,4 +17,9 @@ spec:
       containers:
       - name: webpage-qa
         image: "gcr.io/qmul-lab/webpage-qa:v3.2"
+        env:
+        - name: ADMIN_TOKEN
+        value: '9Zoh37DJ5VxfjUWIKdNVFQdTeIMkgz4j13Odd8eHclw'
+        - name: API_BASE
+        value: 'https://37549f79.ngrok.io/api'
         
