--- a/Kubernetes_deployment/cassandra-peer-service.yaml
+++ b/Kubernetes_deployment/cassandra-peer-service.yaml
@@ -1,5 +1,5 @@
 # Headless service that allows us to get the IP addresses of our Cassandra nodes
-apiVersion: v1
+apiVersion: apps/v1
 kind: Service
 metadata:
   labels:
